[package]
name = "twincatads-rs"
version = "0.1.0"
edition = "2021"
authors = ["Thomas C. Bitsky Jr. <noreply@automateddesign.com>"]
license = "MIT"
homepage = "https://automateddesign.com"
repository = "https://github.com/rhythmchicago/twincatads-rs"
documentation = ""
description = "Rust wrapper for TwinCAT ADS library provided with Beckhoff TwinCAT."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.59"