[package]
name = "twincatads-rs"
version = "0.3.4"
edition = "2021"
authors = ["Thomas C. Bitsky Jr. <noreply@automateddesign.com>"]
license = "MIT"
homepage = "https://automateddesign.com"
repository = "https://adc360.visualstudio.com/adc-public/_git/twincatads-rs"
documentation = "https://adc360.visualstudio.com/adc-public/_git/twincatads-rs"
description = "Rust wrapper for TwinCAT ADS library provided with Beckhoff TwinCAT."


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
ctrlc = "3.4.4"
lazy_static = "1.4.0"
log = "0.4.20"
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0.113"
simplelog = "0.12.1"
mechutil = "0.2.0"
zerocopy = "0.X"
zerocopy-derive = "0.X"
indexmap = "2.2.6"
tokio = { version = "1", features = ["full", "signal"] }


[build-dependencies]
bindgen = "0.69"